--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%; /* Altura para pantallas grandes */
     overflow: hidden;
-    margin-top: 80px; /* Ajusta según la altura del Header */
+    margin-top: 50%; /* Ajusta según la altura del Header */
   }
   
   /* Estilos para pantallas pequeñas (menos de 768px) */
