--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -12,6 +12,7 @@ header {
   background-color: transparent;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
   z-index: 1000;
+  
 }
 
 header.scrolled {
@@ -22,6 +23,7 @@ header.scrolled {
 .logo {
   width: 100px;
   height: auto;
+  border-radius: 50%;
 }
 
 nav {
